swaggerの更新(newsの更新途中) & 404 エラーを 400 エラーに修正
