# app/Http/Controllers/Api/GroupController.php
@@ -234,8 +234,8 @@ class GroupController extends Controller
      *         )
      *     ),
      *     @OA\Response(
-     *         response=404,
-     *         description="存在しないグループのページをリクエストした場合、検索結果が0件であることを表すメッセージを表示",
+     *         response=400,
+     *         description="Bad Request error / 存在しないグループのページをリクエストした場合、検索結果が0件であることを表すメッセージを表示",
      *         @OA\JsonContent(
      *             type="object",
      *             @OA\Property(
@@ -272,7 +272,7 @@ class GroupController extends Controller
 
             // グループが存在しない場合
             if(empty($data)) {
-                return response()->json(['error_message' => config('const.Group.SEARCH_ERR')], 404, [], JSON_UNESCAPED_UNICODE);    
+                return response()->json(['error_message' => config('const.Group.SEARCH_ERR')], 400, [], JSON_UNESCAPED_UNICODE);    
             }
             
             return response()->json(['group' => $data], 200, [], JSON_UNESCAPED_UNICODE);
